--- a/projectList.json
+++ b/projectList.json
@@ -1,1 +1,1 @@
-[{"name":"My First Project","id":"4a607eff-ad73-46db-96df-99bba3755183","userid":"78e010a8-ab22-4a1e-a40d-409390436c4d"},{"name":"My Second Project","id":"72598613-dc8d-49f0-a345-8092e1c3a01f","userid":"78e010a8-ab22-4a1e-a40d-409390436c4d"}]
+[{"name":"My First Project","id":"4a607eff-ad73-46db-96df-99bba3755183","userid":"78e010a8-ab22-4a1e-a40d-409390436c4d"}]
